--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -6,4 +6,10 @@
         app:showAsAction="always">
 
     </item>
+
+    <item android:id="@+id/delete_menu"
+        android:title="@string/delete_deal"
+        app:showAsAction="never">
+    </item>
+
 </menu>
