--- a/app/src/main/res/layout/rv_row.xml
+++ b/app/src/main/res/layout/rv_row.xml
@@ -13,8 +13,7 @@
         android:layout_marginTop="@dimen/txt_margin_standard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_marginLeft="@dimen/txt_margin_standard" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -23,7 +22,9 @@
         android:layout_marginStart="@dimen/txt_margin_standard"
         android:layout_marginTop="@dimen/txt_margin_standard"
         android:layout_marginEnd="8dp"
+        android:fontFamily="casual"
         android:text="TextView"
+        android:textColor="#2196F3"
         android:textSize="@dimen/title_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageDeal"
@@ -36,7 +37,10 @@
         android:layout_marginStart="@dimen/txt_margin_standard"
         android:layout_marginTop="@dimen/txt_margin_standard"
         android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="TextView"
+        android:textColor="#4CAF50"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageDeal"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
@@ -48,8 +52,9 @@
         android:layout_marginTop="@dimen/txt_margin_standard"
         android:layout_marginEnd="@dimen/txt_margin_standard"
         android:layout_marginBottom="20dp"
+        android:fontFamily="monospace"
         android:text="TextView"
-        android:textColor="@color/colorAccent"
+        android:textColor="#F44336"
         android:textSize="@dimen/text_price"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
